--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^9.22.2",
     "firebase-admin": "^11.10.1",
     "react": "^18.2.0",
+    "react-admin-firebase": "^4.1.2",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-geocode": "^0.2.3",
