--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "difmlaw",
   "version": "0.1.0",
-  "homepage": "https://test.difmlaw.com",
+  "homepage": "https://DIFM.difmlaw.com",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
